tests/rosetta/out/Smalltalk/anagrams.out
/tmp/anagrams.st:6: parse error, expected ']'
